# plakait-backend

./: Cargo.toml  README.md  config.example.json  deploy.sh  example-config.json  example.env  redeploy.sh
docs/: devops.md  redeploy.sh  setup.md
src/: app_error.rs  gpt.rs  main.rs  otel.rs  prompt.rs
src/routes/: chat.rs  game.rs  history.rs  mod.rs  root.rs
