[package]
name = "plakait-backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
async-openai = "0.25"
axum = "0.7.7"
axum-macros = "0.4"
backoff = { version = "0.4.0", features = ["tokio"] }
dotenvy = "0.15.7"
once_cell = "1.19"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
tokio = { version = "1.40", features = ["full"] }
tower-http = { version = "0.6", features = ["cors"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3" }
uuid = { version = "1.10", features = ["v4", "serde"] }

